// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component --export should add to index.ts barrel 1`] = `
"export { default as MyLibHello } from './components/hello/hello.vue';
"
`;

exports[`component --export should not export from an app 1`] = `null`;

exports[`component should generate files with jest 1`] = `
"<script setup lang="ts">
defineProps<{}>();
</script>

<template>
  <p>Welcome to MyLibHello!</p>
</template>

<style scoped></style>
"
`;

exports[`component should generate files with jest 2`] = `
"import { mount } from '@vue/test-utils';
import MyLibHello from './hello.vue';

describe('MyLibHello', () => {
  it('renders properly', () => {
    const wrapper = mount(MyLibHello, {});
    expect(wrapper.text()).toContain('Welcome to MyLibHello');
  });
});
"
`;

exports[`component should generate files with vitest 1`] = `
"<script setup lang="ts">
defineProps<{}>();
</script>

<template>
  <p>Welcome to MyLibHello!</p>
</template>

<style scoped></style>
"
`;

exports[`component should generate files with vitest 2`] = `
"import { describe, it, expect } from 'vitest';

import { mount } from '@vue/test-utils';
import MyLibHello from './hello.vue';

describe('MyLibHello', () => {
  it('renders properly', () => {
    const wrapper = mount(MyLibHello, {});
    expect(wrapper.text()).toContain('Welcome to MyLibHello');
  });
});
"
`;
